--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ node_modules/
 package-lock.json
 rethinkdb-2.3.6/
 rethinkdb_data/40636af7-dfc1-499f-b738-82d5c6ddb1ff
+rethinkdb_data/a5bf2b3c-bf2e-4522-934d-bda0a0b03a1f
